# llama3-finetuning

./: LICENSE  README.md  pyproject.toml  train_llama_3_use.ipynb
data/: test.csv
llama3-finetuning/: app.py
llama3-finetuning/data/: import_hf_data.py
llama3-finetuning/notebooks/: train.ipynb
