[tool.poetry]
name = "llama3-finetuning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
torch = "^2.3.0"
datasets = "^2.19.0"
trl = "^0.9.0"
peft = "^0.11.0"
accelerate = "^0.31.0"
bitsandbytes = "^0.43.1"
xformers = "^0.0.26.post1"
scikit-learn = "^1.5.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"